--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       </li>
       <li>
         You should see your directory name, and it should say 'granted' in green for writable
-        status.  Now, close the app and run it again.  Your directory should still
+        status.
+      </li>
+      <li>
+        Now, close the app and run it again.  Your directory should still
         be there, and it should still say 'granted' if the test has passed and persistent permissions
         have been granted by the user.
       </li>
